INT-3219, INT-3226: Fixed text overlapping in rubric in certain browsers

--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,7 @@
 
 #local-joulegrader-gradepane .fitem .fitemtitle {
     width: 0px;
+    display: none;
 }
 
 #local-joulegrader-viewrubric-preview-con .generaltable {
